--- a/Loadcurl/CMakeLists.txt
+++ b/Loadcurl/CMakeLists.txt
@@ -1,14 +1,10 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.0)
 
-project(Loadcurl)
 find_package(CURL)
-add_executable(Loadcurl main.cpp)
-
+add_executable(curltest curltest.cc)
 if(CURL_FOUND)
-    target_include_directories(clib PRIVATE ${CURL_INCLUDE_DIR})
-    target_link_libraries(Loadcurl ${CURL_LIBRARY})
-    message(FATAL_ERROR "CURL library is found")
+    target_include_directories(curltest PRIVATE ${CURL_INCLUDE_DIR})
+    target_link_libraries(curltest ${CURL_LIBRARY})
 else(CURL_FOUND)
     message(FATAL_ERROR "CURL library not found")
 endif(CURL_FOUND)
-
